webcleaner (0.36) unstable; urgency=low

  * use getheader(), not get() on HTTP header object

 -- Bastian Kleineidam <calvin@debian.org>  Wed, 10 Apr 2002 01:11:51 +0200

webcleaner (0.35) unstable; urgency=low

  * fix BinaryCharFilter: use string.maketrans
  * webcleanerconf: dont sort rules alphabetically
  * HttpServer.py: fix Compress module by calling initStateObject before
    sending headers

 -- Bastian Kleineidam <calvin@debian.org>  Tue,  9 Apr 2002 00:11:22 +0200

webcleaner (0.34) unstable; urgency=low

  * Use FOX 1.0.0 libraries

 -- Bastian Kleineidam <calvin@debian.org>  Thu, 28 Mar 2002 01:06:37 +0100

webcleaner (0.33) unstable; urgency=low

  * Fix DOCTYPE filtering with no pubid content (added missing >)
  * Add url regular expression matchers to the filter rules Rewriter,
    Replacer and Gifimage. This allows to match rules only to specific
    urls.
  * Updated webcleanerconf GUI for the modified rules.
  * Update german translation.
  * Dont bail out if /etc/resolv.conf could not be found on DNS init.

 -- Bastian Kleineidam <calvin@debian.org>  Sat, 23 Feb 2002 19:30:21 +0100

webcleaner (0.32) unstable; urgency=low

  * setup.py: fix to work with Python 2.2
  * wc/gui/ConfWindow.py: fix error message with unwritable config file
  * wc/gui/ToolWindow.py: common base class for tools
  * wc/filter/Rewriter.py: add some characters to _noquoteval to prevent
    unnecessary quoting
  * debian/templates: s/webcleanerconf/webcleanertools/
  * wc/proxy/ClientServerMatchmaker.py: return on errors

 -- Bastian Kleineidam <calvin@debian.org>  Tue, 12 Feb 2002 21:15:06 +0100

webcleaner (0.31) unstable; urgency=low

  * debian/webcleaner.docs, MANIFEST.in: remove draft-lutuonen...txt
  * HTML-encode attribute values
  * debian/rules: remove patch backup file from build dir
  * use _WIN32, not WIN32. Fixes compile error on Windows
  * _nt.py: use proper script directory
  * debian/control: suggest webcleanertools
