@@ -2,7 +2,7 @@ TODO
 
 - documentation of the GUI tools
 - webcleanerconf: sortable filters (with up/down)
-- proxy authentication
+- parent proxy authentication
 
 WONTDO
 
