@@ -3,8 +3,8 @@
 <webcleaner
  version="0.9"
  port="9090"
- proxyuser=""
- proxypass=""
+ proxyuser="wummel"
+ proxypass="da39a3ee5e6b4b0d3255bfef95601890afd80709"
  parentproxyuser=""
  parentproxypass=""
  parentproxyport="8000"
