@@ -1,8 +1,10 @@
 webcleaner (0.36) unstable; urgency=low
 
   * use getheader(), not get() on HTTP header object
+  * fix returned status line on errors in ClientServerMatchmaker
+  * implemented Proxy Authentication
 
- -- Bastian Kleineidam <calvin@debian.org>  Wed, 10 Apr 2002 01:11:51 +0200
+ -- Bastian Kleineidam <calvin@debian.org>  Wed, 10 Apr 2002 21:47:34 +0200
 
 webcleaner (0.35) unstable; urgency=low
 
